information on changes since the last release of the package, as well as a
running list of high-level changes from previous versions.  If critical bugs
are found in any of the software, notice of such bugs and the versions in
which they were fixed will be noted here, as well.

-----------------------------------------------------------------------

* ads-github-tools 0.3.4 (TBD)

** fixes

   (None)


** improvements

   (None)


* ads-github-tools 0.3.3 (2021-03-27)

** fixes

*** issue 39: "ads-github-fetch-all-upstreams: default to triangular workflow, but allow override" (reopened)

    https://github.com/salewski/ads-github-tools/issues/39

    This issue was originally noted as fixed in ads-github-tools 0.3.1, but a
    bug was found with the implementation. The '--triangular' and
    '--no-triangular' options worked as advertized, but the default behavior
    of the app was inconsistent with what was documented. The documentation
    indicated that the default behavior was that the tool would use a
    triangular configuration when cloning a repo if the user did not otherwise
    specify a preference, and that was indeed the intention.

    The program's behavior has been corrected to be consistent with the
    documentation in this regard; by default a triangular configuration will
    be used.


*** issue 64: "ads-github-repo-create: JSON string values not properly escaped"

    https://github.com/salewski/ads-github-tools/issues/64

    The 'ads-github-repo-create' tool shipped with ads-github-tools-0.3.2 (and
    earlier) did not properly escape JSON strings during new repo
    creation. When users supplied command line parameters that contained
    string values that would need such escaping in a JSON document, the
    program submitted JSON to the GitHub API that was not well-formed. That
    resulted in an HTTP 400 response, with the response body:
